force-app/main/default/objects/RetryableJob__c/fields/Firsttry__c.field-meta.xml
<CustomField>
    <fullName>Firsttry__c</fullName>
    <label>First try</label>
    <type>DateTime</type>
</CustomField>