force-app/main/default/objects/RetryableJob__c/fields/Lasttry__c.field-meta.xml
<CustomField>
    <fullName>Lasttry__c</fullName>
    <label>Last try</label>
    <type>DateTime</type>
</CustomField>