force-app/main/default/objects/RetryableJob__c/fields/Nexttry__c.field-meta.xml
<CustomField>
    <fullName>Nexttry__c</fullName>
    <label>Next try</label>
    <type>DateTime</type>
</CustomField>