force-app/main/default/objects/RetryableJob__c/fields/SerializedJob__c.field-meta.xml
<CustomField>
    <fullName>SerializedJob__c</fullName>
    <label>SerializedJob</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>